--- a/thesis/ctuthesis-master/references.bib
+++ b/thesis/ctuthesis-master/references.bib
@@ -12,6 +12,23 @@
 	abstract = {The Open Capacitated Arc Routing Problem (OCARP) is an NP-hard arc routing problem where, given an undirected graph, the objective is to find the least cost set of routes that services all edges with positive demand (required edges). The routes are subjected to capacity constraints in relation to edge demands. The OCARP differs from the Capacitated Arc Routing Problem (CARP) since OCARP does not consider a depot and routes are not constrained to form cycles. A hybrid genetic algorithm with feasibilization and local search procedures is proposed for the OCARP. Computational experiments conducted on a set of benchmark instances reveal that the proposed hybrid genetic algorithm achieved the best upper bounds for almost all instances.}
 }
 
+@article{miller1995genetic,
+	title={Genetic algorithms, tournament selection, and the effects of noise},
+	author={Miller, Brad L and Goldberg, David E and others},
+	journal={Complex systems},
+	volume={9},
+	number={3},
+	pages={193--212},
+	year={1995},
+	publisher={[Champaign, IL, USA: Complex Systems Publications, Inc., c1987-}
+}
+
+@article{glogs,
+	title = {Evolutionary algorithms - terms and definitions, https://homepages.fhv.at/hgb/ea-glossary/},
+	author = {Hans-Georg Beyer, Eva Brucherseifer, Wilfried Jakob, Hartmut Pohlheim, Bernhard Sendhof, and Thanh Binh To},
+	url={https://homepages.fhv.at/hgb/ea-glossary/}
+}
+
 @article{BELENGUER2003705,
 	title = {A cutting plane algorithm for the capacitated arc routing problem},
 	journal = {Computers \& Operations Research},
@@ -86,6 +103,13 @@
 	number={1},
 	pages={409--452},
 	year={2013},
+	publisher={Springer}
+}
+
+@book{burke2014search,
+	title={Search methodologies: introductory tutorials in optimization and decision support techniques},
+	author={Burke, Edmund K and Burke, Edmund K and Kendall, Graham and Kendall, Graham},
+	year={2014},
 	publisher={Springer}
 }
 
@@ -310,6 +334,8 @@
 	year={1991},
 	publisher={Van Nostrand Reinhold}
 }
+
+
 
 @book{marte2018handbook,
 	title={Handbook of heuristics},
